@startuml Figura 14B - Módulo Usuarios y Roles

' Configuración
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam groupInheritance 2
hide circle
skinparam shadowing false

title Figura 14B. Diagrama de Clases – Módulo Usuarios y Roles

' ============================================
' CLASES DEL MÓDULO USUARIOS Y ROLES
' ============================================

class Usuario {
  +idUsuario: int
  +nombre: string
  +apellido: string
  +dni: string
  +email: string
  +telefono: string
  -passwordHash: string
  +estado: string
  +idIe: int
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +crear()
  +actualizar()
  +eliminar()
  +autenticar()
  +cambiarPassword()
  +obtenerRoles()
  +asignarRol()
  +activar()
  +desactivar()
}

class Rol {
  +idRol: int
  +nombre: string
  --
  +crear()
  +actualizar()
  +eliminar()
  +listarTodos()
  +obtenerUsuarios()
  +verificarPermiso()
}

class UsuarioRol {
  +idUsuario: int
  +idRol: int
  --
  +asignar()
  +remover()
  +verificarPermiso()
}

class Estudiante {
  +idEstudiante: int
  +idUsuario: int
  +idIe: int
  +idGradoSeccion: int
  +codigoQR: string
  +fechaNacimiento: DateTime
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +crear()
  +actualizar()
  +eliminar()
  +generarCodigoQR()
  +obtenerAsistencias()
  +obtenerApoderados()
  +calcularPorcentajeAsistencia()
}

class Docente {
  +idDocente: int
  +idUsuario: int
  +codigo: string
  +especialidad: string
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +crear()
  +actualizar()
  +eliminar()
  +obtenerHorarios()
  +registrarAsistencia()
  +reportarRetiro()
  +obtenerAulasAsignadas()
}

class Apoderado {
  +idApoderado: int
  +idUsuario: int
  +codigo: string
  +ocupacion: string
  +direccion: string
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +crear()
  +actualizar()
  +eliminar()
  +obtenerEstudiantes()
  +autorizarRetiro()
  +presentarJustificacion()
  +obtenerNotificaciones()
}

class EstudianteApoderado {
  +idEstudiante: int
  +idApoderado: int
  +relacion: string
  +esTitular: boolean
  +puedeRetirar: boolean
  --
  +asignar()
  +actualizar()
  +remover()
  +verificarAutorizacion()
}

' ============================================
' RELACIONES
' ============================================

Usuario *-- Estudiante
Usuario *-- Docente
Usuario *-- Apoderado

Usuario -- UsuarioRol
Rol -- UsuarioRol

Estudiante -- EstudianteApoderado
Apoderado -- EstudianteApoderado

' ============================================
' NOTAS EXPLICATIVAS
' ============================================

note top of Usuario
  **Clase Base de Identidad**
  
  Representa a todos los actores
  del sistema:
  • Estudiantes
  • Docentes
  • Apoderados
  • Administrativos
  • Auxiliares
  
  **Funciones:**
  • Autenticación
  • Autorización
  • Gestión de permisos
end note

note right of Rol
  **Gestión de Permisos**
  
  **Roles del sistema:**
  1. Administrativo
  2. Docente
  3. Apoderado
  4. Estudiante
  5. Auxiliar
  
  Cada rol tiene permisos
  específicos que controlan
  el acceso a funcionalidades.
end note

note left of Estudiante
  **Entidad Central**
  
  **Atributo clave:**
  • codigoQR: Identificador
    único para lectura con
    escáner QR
  
  **Importancia:**
  Es el sujeto central del
  sistema. Todas las
  funcionalidades giran
  en torno al estudiante.
end note

note bottom of EstudianteApoderado
  **Clase Asociativa**
  
  Vincula estudiantes con
  apoderados e incluye
  información adicional:
  
  • relacion: Padre, Madre,
    Tutor, etc.
  • esTitular: Apoderado
    principal
  • puedeRetirar: Autorizado
    para retiros
end note

legend right
  **Módulo Usuarios y Roles**
  
  **Responsabilidad:**
  Gestiona usuarios, roles y
  actores del sistema.
  
  **Actores:**
  • Usuario (base)
  • Estudiante
  • Docente
  • Apoderado
  
  **Clases:** 7
  
  **Relaciones:**
  *-- Composición
  --  Asociación
endlegend

@enduml
